# django-jinja

./: .gitignore  .travis.yml  CHANGES.adoc  CHANGES.rst  CHANGES.txt  LICENSE  MANIFEST.in  README.md  README.rst  changelog.txt  index.html  mkdocs.yml  pyproject.toml  runtests.py  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
django_jinja/: __init__.py  apps.py  backend.py  base.py  cache.py  library.py  loader.py  loaders.py  models.py  utils.py  views.py
django_jinja/builtins/: __init__.py  extensions.py  filters.py  global_context.py
django_jinja/contrib/_dajaxice/templatetags/: _dajaxice.py
django_jinja/contrib/_easy_thumbnails/templatetags/: thumbnails.py
django_jinja/management/commands/: makemessages.py
django_jinja/views/: __init__.py
django_jinja/views/generic/: base.py  dates.py  detail.py  edit.py  list.py
doc/: Makefile  content-docinfo.html  content.adoc  doc.asciidoc
doc/assets/simple-red-titles/: stylesheet.css
doc/source/: conf.py  index.rst
docs/: Makefile  conf.py  contrib.rst  differences.rst  index.html  index.md  index.rst  quickstart.rst
docs/_themes/kr/: layout.html
example_project/: manage.py
example_project/example_project/: settings.py  urls.py  wsgi.py
example_project/example_project/web/: views.py
latest/: index.html
testing/: runmakemessages.py  runtests.py  settings.py  uwsgi.ini  wsgi.py
testing/django_jinja_test/: tests.py
testing/django_jinja_test/templates/: test-i18n.jinja
testing/django_jinja_test/templatetags/: sample_addons.py
testing/testapp/: forms.py  models.py  tests.py  urls.py  views.py
testing/testapp/jinja2/: hola_mundo.html
testing/testapp/migrations/: 0001_initial.py  0002_testmodel_date.py
testing/testapp/static/: style.css
testing/testapp/templates/: hello_world.jinja  i18n_test.html  i18n_test.jinja  pipeline_test.jinja  streaming_test.jinja  test-debug-var.jinja  test-render-with.jinja
testing/testapp/templatetags/: sample_addons.py
tests/: runtests.py
tests/django_jinja_test/: tests.py  urls.py  views.py
(+31 files in other folders)
